--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -409,8 +409,8 @@
   "anima.ui.settings.tabVisibility.mystic.title": "Mystic",
   "anima.ui.settings.tabVisibility.psychic.title": "Psychic",
   "anima.ui.settings.tabVisibility.title": "Tab visibility",
-  "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Those numbers that are not multiples of 5 will be rounded to near 5 multiple. For example: 22 will be rounded to 20 adn 13 to 15",
-  "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Round damage calculator damage result in multiples of 5?",
+  "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Floor items in multiples of 5. Applies for damage",
+  "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Floor calculated damage in multiples of 5?",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Inside managed combat system, the \"Show roll\" checkbox will be checked by default depending on this value",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Show GM rolls automatically in combat",
   "anima.ui.tabs.combat": "Combat",
@@ -502,7 +502,7 @@
   "macros.combat.dialog.defending.title": "Defending from ",
   "macros.combat.dialog.defense.title": "Defense",
   "macros.combat.dialog.defenseButton.title": "Send defense",
-  "macros.combat.dialog.defenseCount.title": "Defense #",
+  "macros.combat.dialog.defenseCount.title": "Defense penalty",
   "macros.combat.dialog.defenseSent.title": "Defense sent. Waiting for combat results...",
   "macros.combat.dialog.defenseType.block.title": "Block",
   "macros.combat.dialog.defenseType.dodge.title": "Dodge",
