--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -408,8 +408,8 @@
   "anima.ui.settings.tabVisibility.mystic.title": "Místico",
   "anima.ui.settings.tabVisibility.psychic.title": "Psíquico",
   "anima.ui.settings.tabVisibility.title": "Visibilidad de pestañas",
-  "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Aquellos números que no sean múltiplos de 5 se redondearán al múltiplo más cercano de 5. P.E: 22 se redondeará a 20 y 13 a 15",
-  "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Redondear el daño resultante de la calculadora de daño en múltiplos de 5?",
+  "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Redondea hacia abajo en múltiplos de 5. Aplica al daño",
+  "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Redondear los daños calculados en múltiplos de 5 hacia la baja?",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Cuando se use el combate autogestionado por el sistema, posibilidad de mostrar las tiradas que realice el GM vendrán marcadas por defecto según este valor",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Mostrar tiradas del GM forma automática al combatir",
   "anima.ui.tabs.combat": "Combate",
@@ -500,7 +500,7 @@
   "macros.combat.dialog.defending.title": "Defendiendote de ",
   "macros.combat.dialog.defense.title": "Defensa",
   "macros.combat.dialog.defenseButton.title": "Enviar defensa",
-  "macros.combat.dialog.defenseCount.title": "Defensa #",
+  "macros.combat.dialog.defenseCount.title": "Penalizador por defensa continua",
   "macros.combat.dialog.defenseSent.title": "Defensa enviada. Esperando a los resultados del combate...",
   "macros.combat.dialog.defenseType.block.title": "Bloqueo",
   "macros.combat.dialog.defenseType.dodge.title": "Esquiva",
