--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -473,6 +473,8 @@
   "dialogs.mod.content": "Modifier",
   "dialogs.title": "Dialog",
   "macros.combat.dialog.applyAndCloseButton.title": "Apply and close",
+  "anima.ui.systemSettings.autoAcceptCombatRequests.title": "Auto accept combat requests",
+  "anima.ui.systemSettings.autoAcceptCombatRequests.hint.title": "Combat requests sent to GM will be auto accepted depending if this option is active",
   "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Apply changes in actors such as fatigue points used or damage",
   "macros.combat.dialog.at.title": "AT",
   "macros.combat.dialog.attack.title": "Attack",
