--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -410,6 +410,8 @@
   "anima.ui.settings.tabVisibility.title": "Visibilidad de pestañas",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Redondea hacia abajo en múltiplos de 5. Aplica al daño",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Redondear los daños calculados en múltiplos de 5 hacia la baja?",
+  "anima.ui.systemSettings.autoAcceptCombatRequests.title": "Auto aceptar las peticiones de combate",
+  "anima.ui.systemSettings.autoAcceptCombatRequests.hint.title": "En el combate autogestionado las peticiones de combate al DM se auto aceptarán dependiendo de si está activa esta opción",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Cuando se use el combate autogestionado por el sistema, posibilidad de mostrar las tiradas que realice el GM vendrán marcadas por defecto según este valor",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Mostrar tiradas del GM forma automática al combatir",
   "anima.ui.tabs.combat": "Combate",
