Replace 'Nivel' with 'Categorias'

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -204,7 +204,7 @@
   "anima.ui.inventoryItemsSection.weight.title": "Peso (kg)",
   "anima.ui.languageSection.base": "Base",
   "anima.ui.languageSection.title": "Idiomas",
-  "anima.ui.levelSection.title": "Nivel",
+  "anima.ui.levelSection.title": "Categorías",
   "anima.ui.moneySection.cooper.title": "Cobre",
   "anima.ui.moneySection.gold.title": "Oro",
   "anima.ui.moneySection.silver.title": "Plata",
