Fix translation for armor requirement
Props to @Lanneval for pointing it out

--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -70,7 +70,7 @@
     "anima.ui.combat.armors.type.soft.title": "Souple",
     "anima.ui.combat.armors.type.title": "Type",
     "anima.ui.combat.armors.wearArmorRequirement.base.title": "Base de Port d'Armure Req.",
-    "anima.ui.combat.armors.wearArmorRequirement.title": "Port d'Amure Req.",
+    "anima.ui.combat.armors.wearArmorRequirement.title": "Port d'Armure Req.",
     "anima.ui.combat.baseValues.attack.title": "Attaque",
     "anima.ui.combat.baseValues.block.title": "Parade",
     "anima.ui.combat.baseValues.dodge.title": "Esquive",
