fix: psychic atk/df string literals in i18n files to be more generic

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -541,8 +541,8 @@
   "macros.combat.dialog.physicalAttack.unarmed.title": "Try to hit, unarmed, to {target}",
   "macros.combat.dialog.physicalDefense.block.title": "Try to block the attack from {target}",
   "macros.combat.dialog.physicalDefense.dodge.title": "Try to dodge the attack from {target}",
-  "macros.combat.dialog.psychicAttack.title": "Focus sending a load of {power} to {target}",
-  "macros.combat.dialog.psychicDefense.title": "Focus to defend with {power} from {target}",
+  "macros.combat.dialog.psychicAttack.title": "Attacks with the mental power {power} to {target}",
+  "macros.combat.dialog.psychicDefense.title": "Defends with the mental power {power} from {target}",
   "macros.combat.dialog.psychicPotential.title": "Psychic potential",
   "macros.combat.dialog.psychicPower.title": "Psychic power",
   "macros.combat.dialog.psychicProjection.title": "Psychic projection",
