--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -541,8 +541,8 @@
   "macros.combat.dialog.physicalAttack.unarmed.title": "Intenta golpear, desarmado, a {target}",
   "macros.combat.dialog.physicalDefense.block.title": "Intenta bloquear el ataque {target}",
   "macros.combat.dialog.physicalDefense.dodge.title": "Intenta esquivar el ataque {target}",
-  "macros.combat.dialog.psychicAttack.title": "Se concentra enviando una descarga de {power} a {target}",
-  "macros.combat.dialog.psychicDefense.title": "Se concentra para defenderse con {power} del ataque de {target}",
+  "macros.combat.dialog.psychicAttack.title": "Ataca con el poder mental {power} a {target}",
+  "macros.combat.dialog.psychicDefense.title": "Se defiende con el poder mental {power} de {target}",
   "macros.combat.dialog.psychicPotential.title": "Potencial Psíquico",
   "macros.combat.dialog.psychicPower.title": "Poder psíquico",
   "macros.combat.dialog.psychicProjection.title": "Proyección psíquica",
