Add weapon selector to defense dialog & put block string literal for selector

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -565,7 +565,8 @@
   "macros.combat.dialog.weapon.title": "Arma",
   "macros.combat.dialog.weaponAttack.title": "Ataque del arma",
   "macros.combat.dialog.weaponQuality.title": "Calidad del arma",
-  "macros.combat.dialog.weaponRow.title": "{name} con ataque de {value}",
+  "macros.combat.dialog.weaponRow.attack.title": "{name} con ataque de {value}",
+  "macros.combat.dialog.weaponRow.defense.title": "{name} con defensa de {value}",
   "macros.combat.dialog.weaponUsed.title": "Arma",
   "macros.combat.dialog.winner.title": " gana esta ronda",
   "macros.damageCalculator.dialog.attack.title": "Ataque",
