--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -563,7 +563,8 @@
     "macros.combat.dialog.weapon.title": "arme",
     "macros.combat.dialog.weaponAttack.title": "Attaque de l'arme",
     "macros.combat.dialog.weaponQuality.title": "Qualité de l'arme",
-    "macros.combat.dialog.weaponRow.title": "{name} avec {value} attaque",
+    "macros.combat.dialog.weaponRow.attack.title": "{name} avec {value} attaque",
+    "macros.combat.dialog.weaponRow.defense.title": "{name} avec {value} défense",
     "macros.combat.dialog.weaponUsed.title": "Arme",
     "macros.combat.dialog.winner.title": " vainceur de cet assaut",
     "macros.damageCalculator.dialog.attack.title": "Attaque",
