--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -565,7 +565,8 @@
   "macros.combat.dialog.weapon.title": "Weapon",
   "macros.combat.dialog.weaponAttack.title": "Weapon attack",
   "macros.combat.dialog.weaponQuality.title": "Weapon quality",
-  "macros.combat.dialog.weaponRow.title": "{name} with {value} attack",
+  "macros.combat.dialog.weaponRow.attack.title": "{name} with {value} attack",
+  "macros.combat.dialog.weaponRow.defense.title": "{name} with {value} defense",
   "macros.combat.dialog.weaponUsed.title": "Weapon",
   "macros.combat.dialog.winner.title": " wins this assault",
   "macros.damageCalculator.dialog.attack.title": "Attack",
