--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -520,6 +520,7 @@
   "macros.combat.dialog.error.noGMActive.title": "No se encuentra ningún GM activo ahora mismo, por lo que no puedes realizar un ataque",
   "macros.combat.dialog.error.noSelectedActor.title": "No tienes seleccionado a ningún personaje. Asegurate de seleccionarlo cuando entres al mundo por primera vez.",
   "macros.combat.dialog.error.noSelectedToken.title": "No tienes seleccionado a ningún atacante",
+  "macros.combat.dialog.error.multipleSelectedToken.title": "Sólo puedes seleccionar un atacante",
   "macros.combat.dialog.error.noTokenInCurrentScene.title": "No eres owner de ningún token en la escena actual",
   "macros.combat.dialog.error.notInActiveScene.title": "No puedes atacar si no estás en la escena activa",
   "macros.combat.dialog.error.oneTarget.title": "Necesitas seleccionar un objetivo",
