fix(lang): english copy

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -189,7 +189,7 @@
   "anima.ui.general.modifiers.allActions.title": "Actions",
   "anima.ui.general.modifiers.physicalActions.title": "Physical",
   "anima.ui.general.modifiers.title": "- Modifiers -",
-  "anima.ui.general.movement.maximum.title": "Máximo (m)",
+  "anima.ui.general.movement.maximum.title": "Max. (m)",
   "anima.ui.general.movement.quarter.title": "1/4",
   "anima.ui.general.movement.running.title": "Running",
   "anima.ui.general.movementType.title": "Mov. type",
