Resolves #112, Related to #92: Added two new fields on the character sheet; fumble range and openRoll range. ABFEExploderRoll will use this values when available instead of DEFAULT_FUMBLE_RANGE and DEFAULT_OPEN_RANGE. When rolling an ability > 200 the fumble range decreases by 1.

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -408,6 +408,9 @@
   "anima.ui.settings.tabVisibility.mystic.title": "Místico",
   "anima.ui.settings.tabVisibility.psychic.title": "Psíquico",
   "anima.ui.settings.tabVisibility.title": "Visibilidad de pestañas",
+  "anima.ui.settings.advancedSettings.title": "Opciones avanzadas",
+  "anima.ui.settings.advancedSettings.openRolls": "Rango de Abierta",
+  "anima.ui.settings.advancedSettings.fumbles": "Rango de Pifia",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Redondea hacia abajo en múltiplos de 5. Aplica al daño",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Redondear los daños calculados en múltiplos de 5 hacia la baja?",
   "anima.ui.systemSettings.autoAcceptCombatRequests.title": "Auto aceptar las peticiones de combate",
