#43, #109, #110: Añadida opción a todas las pestañas de defensa para no tirar dado + Crear pestaña acumulación

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -417,6 +417,7 @@
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Inside managed combat system, the \"Show roll\" checkbox will be checked by default depending on this value",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Show GM rolls automatically in combat",
   "anima.ui.tabs.combat": "Combat",
+  "anima.ui.tabs.damageResistance": "Damage Resistance",
   "anima.ui.tabs.domine": "Domine",
   "anima.ui.tabs.main": "Main",
   "anima.ui.tabs.mystic": "Mystic",
@@ -540,6 +541,7 @@
   "macros.combat.dialog.magicProjection.title": "Magic Projection",
   "macros.combat.dialog.modal.attack.title": "Attacking",
   "macros.combat.dialog.modifier.title": "Modifier",
+  "macros.combat.dialog.noRoll.title": "Without dice roll",
   "macros.combat.dialog.notEnoughFatigue.title": "Don't have enough fatigue points to use",
   "macros.combat.dialog.physicalAttack.title": "Try to hit with {weapon} to {target}",
   "macros.combat.dialog.physicalAttack.unarmed.title": "Try to hit, unarmed, to {target}",
@@ -554,7 +556,7 @@
   "macros.combat.dialog.rolled.title": "Dice rolled",
   "macros.combat.dialog.showResultsButton.title": "Send to chat the results",
   "macros.combat.dialog.showRoll.title": "Show roll",
-  "macros.combat.dialog.noRoll.title": "Without dice roll",
+  "macros.combat.dialog.surprised.title": "Surprised",
   "macros.combat.dialog.spell.title": "Spell",
   "macros.combat.dialog.spellGrade.advanced.title": "Advanced",
   "macros.combat.dialog.spellGrade.arcane.title": "Arcane",
