--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -418,6 +418,7 @@
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Cuando se use el combate autogestionado por el sistema, posibilidad de mostrar las tiradas que realice el GM vendrán marcadas por defecto según este valor",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Mostrar tiradas del GM forma automática al combatir",
   "anima.ui.tabs.combat": "Combate",
+  "anima.ui.tabs.damageResistance": "Acumulación",
   "anima.ui.tabs.domine": "Domine",
   "anima.ui.tabs.main": "Principal",
   "anima.ui.tabs.mystic": "Místico",
@@ -540,6 +541,7 @@
   "macros.combat.dialog.magicProjection.title": "Proyección mágica",
   "macros.combat.dialog.modal.attack.title": "Atacando",
   "macros.combat.dialog.modifier.title": "Modificador",
+  "macros.combat.dialog.noRoll.title": "Sin tirar dado",
   "macros.combat.dialog.notEnoughFatigue.title": "No tienes puntos de cansancio para usar",
   "macros.combat.dialog.physicalAttack.title": "Intenta golpear con su {weapon} a {target}",
   "macros.combat.dialog.physicalAttack.unarmed.title": "Intenta golpear, desarmado, a {target}",
@@ -554,7 +556,7 @@
   "macros.combat.dialog.rolled.title": "Tirada del dado",
   "macros.combat.dialog.showResultsButton.title": "Enviar al chat los resultados",
   "macros.combat.dialog.showRoll.title": "Mostrar tirada",
-  "macros.combat.dialog.noRoll.title": "Sin tirar dado",
+  "macros.combat.dialog.surprised.title": "Sorprendido",
   "macros.combat.dialog.spell.title": "Hechizo",
   "macros.combat.dialog.spellGrade.advanced.title": "Avanzado",
   "macros.combat.dialog.spellGrade.arcane.title": "Arcano",
