--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -417,6 +417,7 @@
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Dans la gestion du sytème de combat, la case \"Show roll\" sera cochée par défaut en fonction de cette valeur",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Montrer les jets automitquement au MJ dans un combat",
   "anima.ui.tabs.combat": "Combat",
+  "anima.ui.tabs.damageResistance": "Encaissement",
   "anima.ui.tabs.domine": "Domaine",
   "anima.ui.tabs.main": "Principal",
   "anima.ui.tabs.mystic": "Mystique",
@@ -538,6 +539,7 @@
   "macros.combat.dialog.magicProjection.title": "Projection Magique",
   "macros.combat.dialog.modal.attack.title": "Attaquer",
   "macros.combat.dialog.modifier.title": "Modifier",
+  "macros.combat.dialog.noRoll.title": "Sans lancer de dés",
   "macros.combat.dialog.notEnoughFatigue.title": "Vous n'avez pas assez de point de Fatigue à utiliser",
   "macros.combat.dialog.physicalAttack.title": "Essayez de toucher avec {weapon} la {target}",
   "macros.combat.dialog.physicalAttack.unarmed.title": "Essayez de toucher, sans arme, la {target}",
@@ -552,7 +554,7 @@
   "macros.combat.dialog.rolled.title": "Dés lancés",
   "macros.combat.dialog.showResultsButton.title": "Envoyer au chat les résultats",
   "macros.combat.dialog.showRoll.title": "Montrer le jet",
-  "macros.combat.dialog.noRoll.title": "Sans lancer de dés",
+  "macros.combat.dialog.surprised.title": "Surpris",
   "macros.combat.dialog.spell.title": "Sort",
   "macros.combat.dialog.spellGrade.advanced.title": "Avancé",
   "macros.combat.dialog.spellGrade.arcane.title": "Arcane",
