--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -416,6 +416,8 @@
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "Arrondire à la baisse les dégâts (multiple de 5 le plus proche)?",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Dans la gestion du sytème de combat, la case \"Show roll\" sera cochée par défaut en fonction de cette valeur",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Montrer les jets automitquement au MJ dans un combat",
+  "anima.ui.systemSettings.useCombatTable.title": "Utiliser la table de combat",
+  "anima.ui.systemSettings.useCombatTable.hint.title": "Calculez les dégâts en utilisant la table de combat dans le Core Exxet pg. 334-335",
   "anima.ui.tabs.combat": "Combat",
   "anima.ui.tabs.damageResistance": "Encaissement",
   "anima.ui.tabs.domine": "Domaine",
