Campo editable en la ficha para indicar si es un ser de acumulación o una masa de enemigos

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -409,9 +409,13 @@
   "anima.ui.settings.tabVisibility.mystic.title": "Mystic",
   "anima.ui.settings.tabVisibility.psychic.title": "Psychic",
   "anima.ui.settings.tabVisibility.title": "Tab visibility",
+  "anima.ui.settings.advancedSettings.defenseType.damageResistance.title": "Damage resistance",
+  "anima.ui.settings.advancedSettings.defenseType.mass.title": "Mass of enemies",
+  "anima.ui.settings.advancedSettings.defenseType.normal.title": "Normal",
+  "anima.ui.settings.advancedSettings.defenseType.title": "Defense type",
+  "anima.ui.settings.advancedSettings.fumbles.title": "Fumble Range",
+  "anima.ui.settings.advancedSettings.openRolls.title": "Open Roll Range",
   "anima.ui.settings.advancedSettings.title": "Advanced Settings",
-  "anima.ui.settings.advancedSettings.openRolls": "Open Roll Range",
-  "anima.ui.settings.advancedSettings.fumbles": "Fumble Range",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Floor items in multiples of 5. Applies for damage",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Floor calculated damage in multiples of 5?",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Inside managed combat system, the \"Show roll\" checkbox will be checked by default depending on this value",
