--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -408,9 +408,13 @@
   "anima.ui.settings.tabVisibility.mystic.title": "Místico",
   "anima.ui.settings.tabVisibility.psychic.title": "Psíquico",
   "anima.ui.settings.tabVisibility.title": "Visibilidad de pestañas",
+  "anima.ui.settings.advancedSettings.defenseType.damageResistance.title": "Acumulación",
+  "anima.ui.settings.advancedSettings.defenseType.mass.title": "Masa de enemigos",
+  "anima.ui.settings.advancedSettings.defenseType.normal.title": "Normal",
+  "anima.ui.settings.advancedSettings.defenseType.title": "Tipo de defensa",
+  "anima.ui.settings.advancedSettings.fumbles.title": "Rango de Pifia",
+  "anima.ui.settings.advancedSettings.openRolls.title": "Rango de Abierta",
   "anima.ui.settings.advancedSettings.title": "Opciones avanzadas",
-  "anima.ui.settings.advancedSettings.openRolls": "Rango de Abierta",
-  "anima.ui.settings.advancedSettings.fumbles": "Rango de Pifia",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Redondea hacia abajo en múltiplos de 5. Aplica al daño",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Redondear los daños calculados en múltiplos de 5 hacia la baja?",
   "anima.ui.systemSettings.autoAcceptCombatRequests.title": "Auto aceptar las peticiones de combate",
