--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -409,9 +409,13 @@
   "anima.ui.settings.tabVisibility.mystic.title": "Mystique",
   "anima.ui.settings.tabVisibility.psychic.title": "Psychique",
   "anima.ui.settings.tabVisibility.title": "Table de visibilité",
+  "anima.ui.settings.advancedSettings.defenseType.damageResistance.title": "Encaissement",
+  "anima.ui.settings.advancedSettings.defenseType.mass.title": "Masse d'ennemis",
+  "anima.ui.settings.advancedSettings.defenseType.normal.title": "Normal",
+  "anima.ui.settings.advancedSettings.defenseType.title": "Type de défense",
+  "anima.ui.settings.advancedSettings.fumbles.title": "Marge de Fumble",
+  "anima.ui.settings.advancedSettings.openRolls.title": "Marge d'ouverte",
   "anima.ui.settings.advancedSettings.title": "Paramètres avancés",
-  "anima.ui.settings.advancedSettings.openRolls": "Marge d'ouverte",
-  "anima.ui.settings.advancedSettings.fumbles": "Marge de Fumble",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Arrondir au multiple de 5. Applicable aux dégâts",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "Arrondire à la baisse les dégâts (multiple de 5 le plus proche)?",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Dans la gestion du sytème de combat, la case \"Show roll\" sera cochée par défaut en fonction de cette valeur",
