--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -495,6 +495,7 @@
   "macros.combat.dialog.attackType.combat.title": "Physic",
   "macros.combat.dialog.attackType.mystic.title": "Magic",
   "macros.combat.dialog.attackType.psychic.title": "Psychic",
+  "macros.combat.dialog.attackType.resistance.title": "Damage Resistance",
   "macros.combat.dialog.attacker.title": "Attacker",
   "macros.combat.dialog.attackerCustomModifier.title": "Attacker custom modifier",
   "macros.combat.dialog.attacking.title": "Attacking to ",
