Calcular regeneración (WIP) #119

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -195,6 +195,9 @@
   "anima.ui.general.movementType.title": "Mov. type",
   "anima.ui.general.naturalPenalty.title": "Natural pen.",
   "anima.ui.general.presence.title": "Presence",
+  "anima.ui.general.regeneration.regenerationType.title": "Regen. type",
+  "anima.ui.general.regeneration.resting.title": "Resting",
+  "anima.ui.general.regeneration.notResting.title": "Not resting",
   "anima.ui.general.tabs.first": "Character",
   "anima.ui.general.tabs.second": "Details",
   "anima.ui.general.tabs.third": "Inventory",
