--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -195,6 +195,9 @@
   "anima.ui.general.movementType.title": "Tipo mov.",
   "anima.ui.general.naturalPenalty.title": "Pen. Natural",
   "anima.ui.general.presence.title": "Presencia",
+  "anima.ui.general.regeneration.regenerationType.title": "Tipo regen.",
+  "anima.ui.general.regeneration.resting.title": "Descansando",
+  "anima.ui.general.regeneration.notResting.title": "Sin descanso",
   "anima.ui.general.tabs.first": "Personaje",
   "anima.ui.general.tabs.second": "Detalles",
   "anima.ui.general.tabs.third": "Inventario",
