--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -195,6 +195,9 @@
   "anima.ui.general.movementType.title": "Type Mov.",
   "anima.ui.general.naturalPenalty.title": "Malus Naturel",
   "anima.ui.general.presence.title": "Présence",
+  "anima.ui.general.regeneration.regenerationType.title": "Type regen.",
+  "anima.ui.general.regeneration.resting.title": "Reposez-vous",
+  "anima.ui.general.regeneration.notResting.title": "Pas de repos",
   "anima.ui.general.tabs.first": "Personnage",
   "anima.ui.general.tabs.second": "Détails",
   "anima.ui.general.tabs.third": "Inventaire",
