--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -195,9 +195,36 @@
   "anima.ui.general.movementType.title": "Mov. type",
   "anima.ui.general.naturalPenalty.title": "Natural pen.",
   "anima.ui.general.presence.title": "Presence",
+  "anima.ui.general.regeneration.all.title": "Todos",
+  "anima.ui.general.regeneration.penaltyReduction.title": "Penalty Reduction",
   "anima.ui.general.regeneration.regenerationType.title": "Regen. type",
   "anima.ui.general.regeneration.resting.title": "Resting",
   "anima.ui.general.regeneration.notResting.title": "Not resting",
+  "anima.ui.general.regeneration.period.d.title": " per day",
+  "anima.ui.general.regeneration.period.h.title": " per hour",
+  "anima.ui.general.regeneration.period.m.title": " per minute",
+  "anima.ui.general.regeneration.period.a.title": " por round",
+  "anima.ui.general.regeneration.special.0.title": "",
+  "anima.ui.general.regeneration.special.1.title": "",
+  "anima.ui.general.regeneration.special.10.title": "As above, but in one day",
+  "anima.ui.general.regeneration.special.11.title": "Any amputated limb is recovered by attaching the remains to the stump for one week.",
+  "anima.ui.general.regeneration.special.12.title": "As above, but in three days",
+  "anima.ui.general.regeneration.special.13.title": "As above, but in one day",
+  "anima.ui.general.regeneration.special.14.title": "Any limb is recovered by attaching it to the stump for a few hours.",
+  "anima.ui.general.regeneration.special.15.title": "Any limb recovers immediately if attached to the stump during an assault. Except for the head, any amputated limb grows back within a week.",
+  "anima.ui.general.regeneration.special.16.title": "Except for the head, any amputated limb grows back within a day.",
+  "anima.ui.general.regeneration.special.17.title": "Except for the head, any amputated limb grows back in a few minutes.",
+  "anima.ui.general.regeneration.special.18.title": "Except for the head, any amputated limb grows back in a few rounds.",
+  "anima.ui.general.regeneration.special.19.title": "Any severed limb grows and is fully functional in an assault",
+  "anima.ui.general.regeneration.special.2.title": "",
+  "anima.ui.general.regeneration.special.20.title": "All physical critics are cancelled",
+  "anima.ui.general.regeneration.special.3.title": "",
+  "anima.ui.general.regeneration.special.4.title": "",
+  "anima.ui.general.regeneration.special.5.title": "No scarring",
+  "anima.ui.general.regeneration.special.6.title": "The character does not suffer the effects of exsanguination.",
+  "anima.ui.general.regeneration.special.7.title": "Cleanly amputated limbs recover if they are attached to the stump for one week.",
+  "anima.ui.general.regeneration.special.8.title": "As above, but in five days",
+  "anima.ui.general.regeneration.special.9.title": "As above, but in three days. The character automatically overcomes the state between life and death.",
   "anima.ui.general.tabs.first": "Character",
   "anima.ui.general.tabs.second": "Details",
   "anima.ui.general.tabs.third": "Inventory",
