--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -195,9 +195,36 @@
   "anima.ui.general.movementType.title": "Tipo mov.",
   "anima.ui.general.naturalPenalty.title": "Pen. Natural",
   "anima.ui.general.presence.title": "Presencia",
+  "anima.ui.general.regeneration.all.title": "Todos",
+  "anima.ui.general.regeneration.penaltyReduction.title": "Reducción de Negativos",
   "anima.ui.general.regeneration.regenerationType.title": "Tipo regen.",
   "anima.ui.general.regeneration.resting.title": "Descansando",
   "anima.ui.general.regeneration.notResting.title": "Sin descanso",
+  "anima.ui.general.regeneration.period.d.title": " al día",
+  "anima.ui.general.regeneration.period.h.title": " por hora",
+  "anima.ui.general.regeneration.period.m.title": " por minuto",
+  "anima.ui.general.regeneration.period.a.title": " por asalto",
+  "anima.ui.general.regeneration.special.0.title": "",
+  "anima.ui.general.regeneration.special.1.title": "",
+  "anima.ui.general.regeneration.special.10.title": "Como el anterior, pero en un día",
+  "anima.ui.general.regeneration.special.11.title": "Cualquier miembro amputado se recupera, uniendo los restos al muñón durante una semana",
+  "anima.ui.general.regeneration.special.12.title": "Como el anterior, pero en tres días",
+  "anima.ui.general.regeneration.special.13.title": "Como el anterior, pero en un día",
+  "anima.ui.general.regeneration.special.14.title": "Cualquier miembro se recupera, uniéndolo al muñón durante unas pocas horas",
+  "anima.ui.general.regeneration.special.15.title": "Cualquier miembro se recupera inmediatamente si se une al muñón durante un asalto. Salvo la cabeza, cualquier miembro amputado vuelve a crecer en una semana",
+  "anima.ui.general.regeneration.special.16.title": "Salvo la cabeza, cualquier miembro amputado vuelve a crecer en un día",
+  "anima.ui.general.regeneration.special.17.title": "Salvo la cabeza, cualquier miembro amputado vuelve a crecer en pocos minutos",
+  "anima.ui.general.regeneration.special.18.title": "Salvo la cabeza, cualquier miembro amputado vuelve a crecer en pocos asaltos",
+  "anima.ui.general.regeneration.special.19.title": "Cualquier miembro seccionado crece y es completamente funcional en un asalto",
+  "anima.ui.general.regeneration.special.2.title": "",
+  "anima.ui.general.regeneration.special.20.title": "Todos los críticos físicos son anulados",
+  "anima.ui.general.regeneration.special.3.title": "",
+  "anima.ui.general.regeneration.special.4.title": "",
+  "anima.ui.general.regeneration.special.5.title": "No quedan cicatrices",
+  "anima.ui.general.regeneration.special.6.title": "El personaje no sufre los efectos del desangramiento",
+  "anima.ui.general.regeneration.special.7.title": "Los miembros limpiamente amputados se recuperan si se unen al muñón durante una semana",
+  "anima.ui.general.regeneration.special.8.title": "Como el anterior, pero en cinco días",
+  "anima.ui.general.regeneration.special.9.title": "Como el anterior, pero en tres días. El personaje supera automÃ¡ticamente el estado entre la vida y la muerte",
   "anima.ui.general.tabs.first": "Personaje",
   "anima.ui.general.tabs.second": "Detalles",
   "anima.ui.general.tabs.third": "Inventario",
