--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -196,35 +196,35 @@
   "anima.ui.general.naturalPenalty.title": "Malus Naturel",
   "anima.ui.general.presence.title": "Présence",
   "anima.ui.general.regeneration.all.title": "Todos",
-  "anima.ui.general.regeneration.penaltyReduction.title": "Reducción de Negativos",
-  "anima.ui.general.regeneration.regenerationType.title": "Type regen.",
+  "anima.ui.general.regeneration.penaltyReduction.title": "Réduction des négatifs",
+  "anima.ui.general.regeneration.regenerationType.title": "Type régén.",
   "anima.ui.general.regeneration.resting.title": "Reposez-vous",
   "anima.ui.general.regeneration.notResting.title": "Pas de repos",
-  "anima.ui.general.regeneration.period.d.title": " al día",
-  "anima.ui.general.regeneration.period.h.title": " por hora",
-  "anima.ui.general.regeneration.period.m.title": " por minuto",
-  "anima.ui.general.regeneration.period.a.title": " por asalto",
+  "anima.ui.general.regeneration.period.d.title": " par jour",
+  "anima.ui.general.regeneration.period.h.title": " par heure",
+  "anima.ui.general.regeneration.period.m.title": " par minute",
+  "anima.ui.general.regeneration.period.a.title": " par round",
   "anima.ui.general.regeneration.special.0.title": "",
   "anima.ui.general.regeneration.special.1.title": "",
-  "anima.ui.general.regeneration.special.10.title": "Como el anterior, pero en un día",
-  "anima.ui.general.regeneration.special.11.title": "Cualquier miembro amputado se recupera, uniendo los restos al muñón durante una semana",
-  "anima.ui.general.regeneration.special.12.title": "Como el anterior, pero en tres días",
-  "anima.ui.general.regeneration.special.13.title": "Como el anterior, pero en un día",
-  "anima.ui.general.regeneration.special.14.title": "Cualquier miembro se recupera, uniéndolo al muñón durante unas pocas horas",
-  "anima.ui.general.regeneration.special.15.title": "Cualquier miembro se recupera inmediatamente si se une al muñón durante un asalto. Salvo la cabeza, cualquier miembro amputado vuelve a crecer en una semana",
-  "anima.ui.general.regeneration.special.16.title": "Salvo la cabeza, cualquier miembro amputado vuelve a crecer en un día",
-  "anima.ui.general.regeneration.special.17.title": "Salvo la cabeza, cualquier miembro amputado vuelve a crecer en pocos minutos",
-  "anima.ui.general.regeneration.special.18.title": "Salvo la cabeza, cualquier miembro amputado vuelve a crecer en pocos asaltos",
-  "anima.ui.general.regeneration.special.19.title": "Cualquier miembro seccionado crece y es completamente funcional en un asalto",
+  "anima.ui.general.regeneration.special.10.title": "Comme ci-dessus, mais en un seul jour",
+  "anima.ui.general.regeneration.special.11.title": "Tout membre amputé est récupéré en attachant les restes au moignon pendant une semaine.",
+  "anima.ui.general.regeneration.special.12.title": "Comme ci-dessus, mais en trois jours",
+  "anima.ui.general.regeneration.special.13.title": "Comme ci-dessus, mais en un jour",
+  "anima.ui.general.regeneration.special.14.title": "Tout membre est récupéré en l'attachant à la souche pendant quelques heures.",
+  "anima.ui.general.regeneration.special.15.title": "Tout membre récupère immédiatement s'il est attaché à la souche pendant un assaut. À l'exception de la tête, tout membre amputé repousse en une semaine.",
+  "anima.ui.general.regeneration.special.16.title": "À l'exception de la tête, tout membre amputé repousse en un jour.",
+  "anima.ui.general.regeneration.special.17.title": "À l'exception de la tête, tout membre amputé repousse en quelques minutes.",
+  "anima.ui.general.regeneration.special.18.title": "À l'exception de la tête, tout membre amputé repousse en quelques rounds.",
+  "anima.ui.general.regeneration.special.19.title": "Tout membre sectionné repousse et est entièrement fonctionnel lors d'un assaut.",
   "anima.ui.general.regeneration.special.2.title": "",
-  "anima.ui.general.regeneration.special.20.title": "Todos los críticos físicos son anulados",
+  "anima.ui.general.regeneration.special.20.title": "Toutes les critiques physiques sont annulées",
   "anima.ui.general.regeneration.special.3.title": "",
   "anima.ui.general.regeneration.special.4.title": "",
-  "anima.ui.general.regeneration.special.5.title": "No quedan cicatrices",
-  "anima.ui.general.regeneration.special.6.title": "El personaje no sufre los efectos del desangramiento",
-  "anima.ui.general.regeneration.special.7.title": "Los miembros limpiamente amputados se recuperan si se unen al muñón durante una semana",
-  "anima.ui.general.regeneration.special.8.title": "Como el anterior, pero en cinco días",
-  "anima.ui.general.regeneration.special.9.title": "Como el anterior, pero en tres días. El personaje supera automÃ¡ticamente el estado entre la vida y la muerte",
+  "anima.ui.general.regeneration.special.5.title": "Il ne reste aucune cicatrice",
+  "anima.ui.general.regeneration.special.6.title": "Le personnage ne subit pas les effets de l'exsanguination.",
+  "anima.ui.general.regeneration.special.7.title": "Les membres amputés proprement récupèrent s'ils sont attachés à la souche pendant une semaine.",
+  "anima.ui.general.regeneration.special.8.title": "Comme la précédente, mais en cinq jours",
+  "anima.ui.general.regeneration.special.9.title": "Comme la précédente, mais en trois jours. Le personnage surmonte automatiquement l'état entre la vie et la mort.",
   "anima.ui.general.tabs.first": "Personnage",
   "anima.ui.general.tabs.second": "Détails",
   "anima.ui.general.tabs.third": "Inventaire",
